:hammer: fix font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
+h2 {
+    font-size: 32px;
+}
+
 p {
   font-size: 1.2em;
 }
@@ -199,3 +203,11 @@ aside h2 {
     font-weight: bold;
 }
 
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 26px;
+  }
+  li {
+    font-size: 20px;
+  }
+}
